# Cli-Modelarium

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.zh.md  SECURITY.md  pyproject.toml
.github/.github/workflows/: ci.yml
.github/workflows/: ci.yml
examples/: README.md  basic_comparison.sh  batch_evaluation.json  ci_eval_suite.json  compare_all_providers.sh  cost_gated_comparison.sh  dashscope_qwen.sh  expected_facts_example.txt  github_actions_workflow.yml  hallucination_test.json  judge_panel.sh  local_models_discovery.sh  mcnemar_hallucination.sh  model_groups.sh  publication_grade_eval.sh  reproducibility_analysis.sh  statistical_significance.sh
src/cli_modelarium/: __init__.py  __main__.py  assertions.py  banner.py  batch.py  cli.py  exceptions.py  hallucination.py  io_safety.py  judging.py  models_registry.py  output_formatters.py  pricing.py  run_statistics.py  security.py  streaming.py
src/cli_modelarium/providers/: __init__.py  _utils.py  anthropic_provider.py  base.py  dashscope_provider.py  deepseek_provider.py  google_provider.py  groq_provider.py  local_provider.py  mistral_provider.py  openai_provider.py  openrouter_provider.py  xai_provider.py  zai_provider.py
tests/: conftest.py  test_anthropic_provider.py  test_assertions.py  test_banner.py  test_batch.py  test_bootstrap_ci.py  test_cli_assertions.py  test_cli_batch.py  test_cli_compare_max_cost.py  test_cli_compare_output.py  test_cli_compare_output_with_hallucination.py  test_cli_compare_output_with_judging.py  test_cli_hallucination.py  test_cli_judging.py  test_cli_keys.py  test_cli_runs.py  test_cli_significance.py  test_cli_system_prompts.py  test_cli_v013.py  test_compare_multi_provider.py  test_dashscope_provider.py  test_documentation_files.py  test_examples_run.py  test_google_provider.py  test_hallucination.py  test_jsonschema_optional.py  test_judging.py  test_list_models_local.py  test_local_provider.py  test_mcnemar.py  test_mistral_provider.py  test_models_registry.py  test_models_resolution.py  test_openai_provider.py  test_output_formatters.py  test_paired_tests.py  test_pricing.py  test_provider_inheritance.py  test_run_statistics.py  test_runs_cost_estimation.py  (+8 more)
