[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cli-modelarium"
version = "0.1.3"
description = "LLM comparison CLI for terminal-first developers. Compare 8 providers (OpenAI, Anthropic, Google, xAI, DeepSeek, Mistral, Groq, OpenRouter) + local Ollama/LM Studio side-by-side with parallel streaming, batch eval, LLM-as-judge, hallucination detection, assertions for CI/CD."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Lavelle Hatcher Jr" }]
requires-python = ">=3.11"
keywords = [
    "llm",
    "llm-evaluation",
    "llm-comparison",
    "ai-tools",
    "prompt-engineering",
    "prompt-testing",
    "cli",
    "openai",
    "anthropic",
    "ollama",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "openai~=2.38",
    "anthropic~=0.104",
    "google-genai~=2.6",
    "mistralai~=2.4.7",
    "httpx~=0.28",
    "click~=8.4",
    "rich~=15.0",
    "keyring~=25.7",
    "scipy>=1.17,<2.0",
]

[project.optional-dependencies]
schema = ["jsonschema~=4.26"]
dev = [
    "pytest~=9.0.3",
    "pytest-asyncio~=1.3",
    "pytest-cov~=7.1",
    "ruff~=0.15",
]

[project.urls]
Homepage = "https://github.com/lavellehatcherjr/cli-modelarium"
Repository = "https://github.com/lavellehatcherjr/cli-modelarium"
Issues = "https://github.com/lavellehatcherjr/cli-modelarium/issues"

[project.scripts]
cli-modelarium = "cli_modelarium.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cli_modelarium"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
